--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -148,6 +148,12 @@
       <Filter>references</Filter>
     </None>
     <None Include="ClassDiagram.cd" />
+    <None Include="shaders\transform.ver">
+      <Filter>Resource Files\shaders</Filter>
+    </None>
+    <None Include="shaders\col.frag">
+      <Filter>Resource Files\shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="obj\cube.obj" />
@@ -156,13 +162,5 @@
     <Media Include="obj\monkey.obj">
       <Filter>Resource Files\obj</Filter>
     </Media>
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="shaders\transform.ver">
-      <Filter>Resource Files\shaders</Filter>
-    </FxCompile>
-    <FxCompile Include="shaders\col.frag">
-      <Filter>Resource Files\shaders</Filter>
-    </FxCompile>
   </ItemGroup>
 </Project>
