--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="obj\cube.obj" />
+    <Resource Include="obj\scene.obj" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="obj\monkey.obj">
