--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -141,6 +141,9 @@
     <None Include="shaders\debug.frag">
       <Filter>shader</Filter>
     </None>
+    <None Include="shaders\texture.frag">
+      <Filter>shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
