--- a/Octree2/Octree2.vcxproj
+++ b/Octree2/Octree2.vcxproj
@@ -246,6 +246,7 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="textures\texture2.jpg" />
     <Image Include="texture\No-Mans-Sky-1.jpg">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
