--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -179,5 +179,8 @@
     <Image Include="texture\No-Mans-Sky-1.jpg">
       <Filter>textures</Filter>
     </Image>
+    <Image Include="textures\texture2.jpg">
+      <Filter>textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
