Corrected a bug where a texture with something other than 3 channels would crash the program. Added a constructor to the shader to link different shader files together.

--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -186,5 +186,14 @@
     <Image Include="textures\texture2.jpg">
       <Filter>textures</Filter>
     </Image>
+    <Image Include="C:\Users\florent\AppData\Local\Temp\specular_maps_bricks_image.jpg">
+      <Filter>textures</Filter>
+    </Image>
+    <Image Include="textures\texture.jpg">
+      <Filter>textures</Filter>
+    </Image>
+    <Image Include="textures\4483-normal.jpg">
+      <Filter>shader</Filter>
+    </Image>
   </ItemGroup>
 </Project>
