removed some deprecated functions of the wavefront loader.

--- a/Octree2/Octree2.vcxproj
+++ b/Octree2/Octree2.vcxproj
@@ -253,6 +253,7 @@
   <ItemGroup>
     <Image Include="C:\Users\florent\AppData\Local\Temp\specular_maps_bricks_image.jpg" />
     <Image Include="textures\4483-normal.jpg" />
+    <Image Include="textures\bricks_normal.jpg" />
     <Image Include="textures\texture.jpg" />
     <Image Include="textures\texture2.jpg" />
     <Image Include="texture\No-Mans-Sky-1.jpg">
