--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -195,5 +195,8 @@
     <Image Include="textures\4483-normal.jpg">
       <Filter>shader</Filter>
     </Image>
+    <Image Include="textures\bricks_normal.jpg">
+      <Filter>textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
