--- a/Octree2/Octree2.vcxproj
+++ b/Octree2/Octree2.vcxproj
@@ -147,9 +147,10 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
-    <ClInclude Include="ObjectInstance.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="Polygon.h" />
     <ClInclude Include="resource.h" />
@@ -169,10 +170,11 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
-    <ClCompile Include="ObjectInstance.cpp" />
     <ClCompile Include="Octree.cpp" />
     <ClCompile Include="Polygon.cpp" />
     <ClCompile Include="Scene.cpp" />
