--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -21,7 +21,8 @@
     <ClCompile Include="ShaderSpecular.cpp" />
     <ClCompile Include="VertexBufferObject.cpp" />
     <ClCompile Include="Material.cpp" />
-    <ClCompile Include="ObjectInstance.cpp" />
+    <ClCompile Include="EventHandler.cpp" />
+    <ClCompile Include="GameObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h">
@@ -73,7 +74,8 @@
     <ClInclude Include="ShaderSpecular.h" />
     <ClInclude Include="VertexBufferObject.h" />
     <ClInclude Include="Material.h" />
-    <ClInclude Include="ObjectInstance.h" />
+    <ClInclude Include="EventHandler.h" />
+    <ClInclude Include="GameObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Octree2.rc" />
