--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="EventHandler.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="ShaderPBR.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h">
@@ -76,6 +77,7 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="ShaderPBR.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Octree2.rc" />
@@ -139,6 +141,9 @@
     <None Include="shaders\specular.frag">
       <Filter>shader</Filter>
     </None>
+    <None Include="shaders\PBR.frag">
+      <Filter>shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -194,11 +199,13 @@
     <Image Include="textures\texture.jpg">
       <Filter>textures</Filter>
     </Image>
-    <Image Include="textures\4483-normal.jpg">
-      <Filter>shader</Filter>
-    </Image>
     <Image Include="textures\bricks_normal.jpg">
       <Filter>textures</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="obj\plan.obj">
+      <Filter>obj</Filter>
+    </Object>
   </ItemGroup>
 </Project>
